test/types/unions/equality/unionEqDiffType.good
unionEqDiffType.chpl:24: error: unresolved call '==(u0, u2)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:206: note: this candidate did not match: ==(a: ?t1, b: ?t2)
$CHPL_HOME/modules/internal/ChapelBase.chpl:206: note: because where clause evaluated to false
unionEqDiffType.chpl:24: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelUnion.chpl:176: note:   ==(u1: union, u2: u1.type)
$CHPL_HOME/modules/internal/ChapelBase.chpl:156: note:   ==(a: _nilType, b: _nilType)
note: and 100 other candidates, use --print-all-candidates to see them
